--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"svelte-exmarkdown": "^5.0.1"
+		"svelte-exmarkdown": "^5.0.1",
+		"zod": "^4.0.14"
 	}
 }
