--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"mdast-util-to-string": "^4.0.0",
 		"mdsvex": "^0.12.3",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -33,10 +34,13 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
+		"unist-util-visit": "^5.0.0",
 		"unplugin-icons": "^22.2.0",
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
 		"svelte-exmarkdown": "^5.0.1",
 		"zod": "^4.0.14"
 	}
