--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@types/node": "^24.1.0",
+		"@types/three": "^0.179.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -39,9 +40,11 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"lil-gui": "^0.20.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"svelte-exmarkdown": "^5.0.1",
+		"three": "^0.179.1",
 		"zod": "^4.0.14"
 	}
 }
